# rubiker

./: .gitignore  git.sh  init_gpio.sh  make.sh  make_clean.sh  model.tflite  pub_cmd.sh  reset.sh  run.sh  test.sh  test_vision.sh  vision.sh
src/rpi_cam_pub/: CMakeLists.txt  package.xml
src/rpi_cam_pub/launch/: rpi_cam_pub.launch
src/rpi_cam_pub/src/: rpi_cam_pub.cpp
src/rubiker/: CMakeLists.txt  package.xml
src/rubiker/launch/: reset.launch  rubiker.launch  rubiker.launch.save  run.launch  test.launch  test_vision.launch  vision.launch
src/rubiker/msg/: MotorAck.msg  MotorCmd.msg
src/rubiker/scripts/: .vision.py.swp  test_vision.py  vision.py
src/rubiker/src/: .master.cpp.swp  master  master.cpp  motor.cpp  motor2.cpp  pid.cpp  reset.cpp  tacho.cpp
